--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <div id="header" class="animated slideInDown" style="animation-delay:1.8s;">
     <div id="title">Penny Helper</div><br>
     <div id="links">
-        <a href="#skills">skills</a>
-        <a href="#work" style="margin:0px 60px;">works</a>
+        <a href="#nonprofits">Nonprofits</a>
+        <a href="#about" style="margin:0px 60px;">works</a>
         <a href="#contact">contact</a>
     </div>
     </div>
@@ -33,18 +33,20 @@
     </div>
     </center>
 
-    <div id="portfolio">
-             <div id="skills">
-                 <h1>skills.</h1>   
+    <div id="content">
+
+             <div id="nonprofits">
+                 <h1>meet our nonprofits</h1>   
                  <div>
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. In bibendum tincidunt nulla, id semper mi cursus ac. Fusce turpis urna, condimentum sit amet dolor at, vulputate ultrices massa. Vestibulum non euismod nulla, eu pretium risus. Curabitur porta molestie vulputate. Sed tortor enim, rhoncus vel mauris vitae, elementum condimentum augue. Donec fermentum lobortis lectus, in feugiat turpis faucibus et. Pellentesque luctus metus vitae augue lobortis sagittis vitae sit amet enim. Morbi egestas velit ac arcu fermentum lacinia. Nullam eget hendrerit neque. Cras et laoreet ante. Vivamus condimentum euismod commodo. Nulla pulvinar, turpis vitae condimentum tempor, ex ex eleifend quam, et maximus sapien mi sed est. Donec elit mi, dictum nec magna quis, mollis sollicitudin ligula. Maecenas ullamcorper ante vel ullamcorper mollis. Interdum et malesuada fames ac ante ipsum primis in faucibus.
                         </p>
+                        <button class="btn_one"></button>
                  </div> 
              </div>
          
-              <div id="work">
-                 <h1>works.</h1>
+              <div id="about">
+                 <h1>about the project</h1>
 
                  <div class="project">
                  <h2>project title 1</h2>
@@ -78,9 +80,12 @@
                  </div>   
              </div>
     </div>
+
     <div id="footer">
-        made on earth by a human <br><br> <a href="https://imfunniee.github.io">imfunniee</a>
+        Created by Expeditionary Interest Group<br><br> <a href="https://github.com/pennyhelper">Penny Helper</a>
     </div>
+
 <script src="index.js" type="text/javascript"></script>
+
 </body>
 </html>
