--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div id="middle">
         <div id="tagline" class="animated zoomIn" style="animation-delay:1.8s;">
             The future of cryptocurrency is here<br>
-            <button class="btn_one">Start Today</button>
+            <button href="nonprofits.html" class="btn_one">Start Today</button>
         </div>
     </div>
     </center>
