--- a/index.html
+++ b/index.html
@@ -52,23 +52,22 @@
                  <h1>about the project</h1>
 
                  <div class="project">
-                 <h2>project title 1</h2>
+                 <h2>our solution</h2>
                  <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In bibendum tincidunt nulla, id semper mi cursus ac. Fusce turpis urna, condimentum sit amet dolor at, vulputate ultrices massa. Vestibulum non euismod nulla, eu pretium risus. Curabitur porta molestie vulputate.</div>
                  <button class="btn_one">visit project</button>
                 </div>
 
                 <div class="project">
-                 <h2>project title 2</h2>
+                 <h2>about</h2>
                  <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In bibendum tincidunt nulla, id semper mi cursus ac. Fusce turpis urna, condimentum sit amet dolor at, vulputate ultrices massa. Vestibulum non euismod nulla, eu pretium risus. Curabitur porta molestie vulputate.Lorem ipsum dolor sit amet, consectetur adipiscing elit. In bibendum tincidunt nulla, id semper mi cursus ac. Fusce turpis urna, condimentum sit amet dolor at, vulputate ultrices massa. Vestibulum non euismod nulla, eu pretium risus. Curabitur porta molestie vulputate.
                  </div>
-                 <button class="btn_one">visit project</button>
-                 <button class="btn_two">code</button>
+                 <button class="btn_one">find out more</button>
                 </div>
 
              </div>
          
               <div id="contact">
-                 <h1>contact.</h1> 
+                 <h1>contact</h1> 
                  <form>
                      <input type="text" placeholder="name" required>
                      <input type="email" placeholder="email" required><br>
