--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <center>
     <div id="middle">
         <div id="tagline" class="animated zoomIn" style="animation-delay:1.8s;">
-            The future of cryptocurrency is here<br>
+            the future of cryptocurrency is here<br>
             <button class="btn_one"><a href="nonprofits.html">Start Today</a></button>
         </div>
     </div>
@@ -46,7 +46,7 @@
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. In bibendum tincidunt nulla, id semper mi cursus ac. Fusce turpis urna, condimentum sit amet dolor at, vulputate ultrices massa. Vestibulum non euismod nulla, eu pretium risus. Curabitur porta molestie vulputate. Sed tortor enim, rhoncus vel mauris vitae, elementum condimentum augue. Donec fermentum lobortis lectus, in feugiat turpis faucibus et. Pellentesque luctus metus vitae augue lobortis sagittis vitae sit amet enim. Morbi egestas velit ac arcu fermentum lacinia. Nullam eget hendrerit neque. Cras et laoreet ante. Vivamus condimentum euismod commodo. Nulla pulvinar, turpis vitae condimentum tempor, ex ex eleifend quam, et maximus sapien mi sed est. Donec elit mi, dictum nec magna quis, mollis sollicitudin ligula. Maecenas ullamcorper ante vel ullamcorper mollis. Interdum et malesuada fames ac ante ipsum primis in faucibus.
                         </p>
                  </div> 
-                 <button class="btn_one"><a href="nonprofits.html">view our nonprofits</a></button>
+                 <button class="btn_one"><a id="links" href="nonprofits.html">view our nonprofits</a></button>
                 </div>
          
               <div id="about">
