--- a/nonprofits.html
+++ b/nonprofits.html
@@ -20,7 +20,7 @@
         <div id="spinner"></div>
     </div>
     <div id="header" class="animated slideInDown" style="animation-delay:1.8s;">
-    <div id="title">Penny Helper</div><br>
+    <div id="title"><a href="https://www.eigpennyhelper.com">Penny Helper</a></div><br>
     <div id="links">
         <a href="#nonprofits">nonprofits</a>
         <a href="#about" style="margin:0px 60px;">about</a>
