--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <div id="spinner"></div>
     </div>
     <div id="header" class="animated slideInDown" style="animation-delay:1.8s;">
-    <div id="title">penny helper</div><br>
-    <div id="links">
+        <div id="title"><a href="https://www.eigpennyhelper.com">Penny Helper</a></div><br>
+        <div id="links">
         <a href="#nonprofits">nonprofits</a>
         <a href="#about" style="margin:0px 60px;">about</a>
         <a href="#contact">contact</a>
