--- a/nonprofits.html
+++ b/nonprofits.html
@@ -20,7 +20,7 @@
         <div id="spinner"></div>
     </div>
     <div id="header" class="animated slideInDown" style="animation-delay:1.8s;">
-    <div id="title"><a href="https://www.eigpennyhelper.com">Penny Helper</a></div><br>
+    <div id="title"><a href="https://www.eigpennyhelper.com">penny helper</a></div><br>
     <div id="links">
         <a href="#nonprofits">nonprofits</a>
         <a href="#about" style="margin:0px 60px;">about</a>
@@ -38,28 +38,18 @@
     </center>
 
     <div id="content">
-
-             <div id="nonprofits">
-                 <h1>our nonprofits</h1>   
-                 <div>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. In bibendum tincidunt nulla, id semper mi cursus ac. Fusce turpis urna, condimentum sit amet dolor at, vulputate ultrices massa. Vestibulum non euismod nulla, eu pretium risus. Curabitur porta molestie vulputate. Sed tortor enim, rhoncus vel mauris vitae, elementum condimentum augue. Donec fermentum lobortis lectus, in feugiat turpis faucibus et. Pellentesque luctus metus vitae augue lobortis sagittis vitae sit amet enim. Morbi egestas velit ac arcu fermentum lacinia. Nullam eget hendrerit neque. Cras et laoreet ante. Vivamus condimentum euismod commodo. Nulla pulvinar, turpis vitae condimentum tempor, ex ex eleifend quam, et maximus sapien mi sed est. Donec elit mi, dictum nec magna quis, mollis sollicitudin ligula. Maecenas ullamcorper ante vel ullamcorper mollis. Interdum et malesuada fames ac ante ipsum primis in faucibus.
-                        </p>
-                 </div> 
-                 <button class="btn_one"><a id="links" href="nonprofits.html">view our nonprofits</a></button>
-                </div>
          
               <div id="about">
-                 <h1>about the project</h1>
+                 <h1></h1>
 
                  <div class="project">
-                 <h2>our solution</h2>
+                 <h2>nonprofit 1</h2>
                  <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In bibendum tincidunt nulla, id semper mi cursus ac. Fusce turpis urna, condimentum sit amet dolor at, vulputate ultrices massa. Vestibulum non euismod nulla, eu pretium risus. Curabitur porta molestie vulputate.</div>
                  <button class="btn_one">visit project</button>
                 </div>
 
                 <div class="project">
-                 <h2>about</h2>
+                 <h2>nonprofit 2</h2>
                  <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In bibendum tincidunt nulla, id semper mi cursus ac. Fusce turpis urna, condimentum sit amet dolor at, vulputate ultrices massa. Vestibulum non euismod nulla, eu pretium risus. Curabitur porta molestie vulputate.Lorem ipsum dolor sit amet, consectetur adipiscing elit. In bibendum tincidunt nulla, id semper mi cursus ac. Fusce turpis urna, condimentum sit amet dolor at, vulputate ultrices massa. Vestibulum non euismod nulla, eu pretium risus. Curabitur porta molestie vulputate.
                  </div>
                  <button class="btn_one">find out more</button>
@@ -67,21 +57,6 @@
 
              </div>
          
-              <div id="contact">
-                 <h1>contact</h1> 
-                 <form>
-                     <input type="text" placeholder="name" required>
-                     <input type="email" placeholder="email" required><br>
-                     <textarea placeholder="your message" required rows="5"></textarea><br>
-                     <button class="btn_one">send</button>
-                 </form> 
-                 <div id="details">
-                    <a class="btn_social"><i class="fas fa-phone"></i></a>
-                    <a class="btn_social"><i class="fas fa-at"></i></a>
-                    <a class="btn_social"><i class="fab fa-twitter"></i></a>
-                    <a class="btn_social"><i class="fab fa-dribbble"></i></a>
-                 </div>   
-             </div>
     </div>
 
     <div id="footer">
