--- a/reg.html
+++ b/reg.html
@@ -1,5 +1,5 @@
 here will be the registration email for nonprofit organizatios
 <!DOCTYPE html>
 <html lang="en">
-<form action="http://formspree.io/david01rohweder@email.com"><input type="email" name="_replyto"><textarea   name="body"></textarea><input type="submit" value="Send"></form>
+<form method="POST" action="http://formspree.io/david01rohweder@email.com"><input type="email" name="_replyto"><textarea   name="body"></textarea><input type="submit" value="Send"></form>
 </html>
