--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
     <div id="header" class="animated slideInDown" style="animation-delay:1.8s;">
         <div id="title"><a href="https://www.eigpennyhelper.com">penny helper</a></div><br>
         <div id="links">
-        <a href="#nonprofits">nonprofits</a>
-        <a href="#about" style="margin:0px 60px;">about</a>
-        <a href="#contact">contact</a>
-    </div>
+            <a href="#nonprofits">nonprofits</a>
+            <a href="#about" style="margin:0px 60px;">about</a>
+            <a href="#contact">contact</a>
+        </div>
     </div>
 
     <center>
@@ -50,7 +50,7 @@
                 </div>
          
               <div id="about">
-                 <h1>about the project</h1>
+                 <h1>about penny helper</h1>
 
                  <div class="project">
                  <h2>our solution</h2>
