--- a/nonprofits.html
+++ b/nonprofits.html
@@ -45,7 +45,7 @@
                  <div class="project">
                  <h2>nonprofit 1</h2>
                  <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In bibendum tincidunt nulla, id semper mi cursus ac. Fusce turpis urna, condimentum sit amet dolor at, vulputate ultrices massa. Vestibulum non euismod nulla, eu pretium risus. Curabitur porta molestie vulputate.</div>
-                 <button class="btn_one">visit project</button>
+                 <button class="btn_one" onclick="getLatestSoftware('pennyhelper-n-1-1_20')">Download Software</button>
                 </div>
 
                 <div class="project">
