--- a/nonprofits.html
+++ b/nonprofits.html
@@ -49,10 +49,15 @@
                 </div>
 
                 <div class="project">
-                 <h2>nonprofit 2</h2>
-                 <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In bibendum tincidunt nulla, id semper mi cursus ac. Fusce turpis urna, condimentum sit amet dolor at, vulputate ultrices massa. Vestibulum non euismod nulla, eu pretium risus. Curabitur porta molestie vulputate.Lorem ipsum dolor sit amet, consectetur adipiscing elit. In bibendum tincidunt nulla, id semper mi cursus ac. Fusce turpis urna, condimentum sit amet dolor at, vulputate ultrices massa. Vestibulum non euismod nulla, eu pretium risus. Curabitur porta molestie vulputate.
-                 </div>
-                 <button class="btn_one">find out more</button>
+                    <h2>nonprofit 1</h2>
+                    <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In bibendum tincidunt nulla, id semper mi cursus ac. Fusce turpis urna, condimentum sit amet dolor at, vulputate ultrices massa. Vestibulum non euismod nulla, eu pretium risus. Curabitur porta molestie vulputate.</div>
+                    <button class="btn_one" onclick="getLatestSoftware('pennyhelper-n-2-1_20')">Download Software</button>
+                </div>
+
+                <div class="project">
+                    <h2>nonprofit 1</h2>
+                    <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In bibendum tincidunt nulla, id semper mi cursus ac. Fusce turpis urna, condimentum sit amet dolor at, vulputate ultrices massa. Vestibulum non euismod nulla, eu pretium risus. Curabitur porta molestie vulputate.</div>
+                    <button class="btn_one" onclick="getLatestSoftware('pennyhelper-n-3-1_20')">Download Software</button>
                 </div>
 
              </div>
