--- a/nonprofits.html
+++ b/nonprofits.html
@@ -39,7 +39,7 @@
 
     <div id="content">
          
-              <div id="about">
+              <div id="nonprofits">
                  <h1></h1>
 
                  <div class="project">
