--- a/reg.html
+++ b/reg.html
@@ -1,5 +1,22 @@
 here will be the registration email for nonprofit organizatios
 <!DOCTYPE html>
 <html lang="en">
-<form method="POST" action="http://formspree.io/david01rohweder@email.com"><input type="email" name="_replyto"><textarea   name="body"></textarea><input type="submit" value="Send"></form>
+    <form
+    action="https://formspree.io/mknqggdk"
+    method="POST"
+  >
+    <label>
+      Your email:
+      <input type="text" name="_replyto">
+    </label>
+    <label>
+      Your message:
+      <textarea name="message"></textarea>
+    </label>
+  
+    <!-- your other form fields go here -->
+  
+    <button type="submit">Send</button>
+  </form>
+  
 </html>
