--- a/nonprofits.html
+++ b/nonprofits.html
@@ -20,11 +20,11 @@
         <div id="spinner"></div>
     </div>
     <div id="header" class="animated slideInDown" style="animation-delay:1.8s;">
-    <div id="title"><a href="https://www.eigpennyhelper.com">penny helper</a></div><br>
+    <div id="title"><a href="index.html">penny helper</a></div><br>
     <div id="links">
-        <a href="#nonprofits">nonprofits</a>
-        <a href="#about" style="margin:0px 60px;">about</a>
-        <a href="#contact">contact</a>
+        <a href="nonprofits.html#nonprofits">nonprofits</a>
+        <a href="about.html#about" style="margin:0px 60px;">about</a>
+        <a href="contact.html#contact">contact</a>
     </div>
     </div>
 
@@ -32,7 +32,7 @@
     <div id="middle">
         <div id="tagline" class="animated zoomIn" style="animation-delay:1.8s;">
             the future of cryptocurrency is here<br>
-            <button class="btn_one"><a href="nonprofits.html">Start Today</a></button>
+            <button class="btn_one"><a href="nonprofits.html#nonprofits">Start Today</a></button>
         </div>
     </div>
     </center>
@@ -40,7 +40,7 @@
     <div id="content">
          
               <div id="nonprofits">
-                 <h1></h1>
+                 <h1>nonprofits</h1>
 
                  <div class="project">
                  <h2>nonprofit 1</h2>
@@ -49,13 +49,13 @@
                 </div>
 
                 <div class="project">
-                    <h2>nonprofit 1</h2>
+                    <h2>nonprofit 2</h2>
                     <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In bibendum tincidunt nulla, id semper mi cursus ac. Fusce turpis urna, condimentum sit amet dolor at, vulputate ultrices massa. Vestibulum non euismod nulla, eu pretium risus. Curabitur porta molestie vulputate.</div>
                     <button class="btn_one" onclick="getLatestSoftware('pennyhelper-n-2-1_20')">Download Software</button>
                 </div>
 
                 <div class="project">
-                    <h2>nonprofit 1</h2>
+                    <h2>nonprofit 3</h2>
                     <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In bibendum tincidunt nulla, id semper mi cursus ac. Fusce turpis urna, condimentum sit amet dolor at, vulputate ultrices massa. Vestibulum non euismod nulla, eu pretium risus. Curabitur porta molestie vulputate.</div>
                     <button class="btn_one" onclick="getLatestSoftware('pennyhelper-n-3-1_20')">Download Software</button>
                 </div>
