--- a/nonprofits.html
+++ b/nonprofits.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Penny Helper</title>
-    <link rel="icon" href="img/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="img/icon.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
     <link href="https://fonts.googleapis.com/css?family=Comfortaa:700" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
@@ -45,19 +45,19 @@
                  <div class="project">
                  <h2>nonprofit 1</h2>
                  <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In bibendum tincidunt nulla, id semper mi cursus ac. Fusce turpis urna, condimentum sit amet dolor at, vulputate ultrices massa. Vestibulum non euismod nulla, eu pretium risus. Curabitur porta molestie vulputate.</div>
-                 <button class="btn_one" onclick="getLatestSoftware('pennyhelper-n-1-1_20')">Download Software</button>
+                 <button class="btn_one" id="pennyhelper-n-1-1_20" onclick="getLatestSoftware('pennyhelper-n-1-1_20')">Download Software</button>
                 </div>
 
                 <div class="project">
                     <h2>nonprofit 2</h2>
                     <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In bibendum tincidunt nulla, id semper mi cursus ac. Fusce turpis urna, condimentum sit amet dolor at, vulputate ultrices massa. Vestibulum non euismod nulla, eu pretium risus. Curabitur porta molestie vulputate.</div>
-                    <button class="btn_one" onclick="getLatestSoftware('pennyhelper-n-2-1_20')">Download Software</button>
+                    <button class="btn_one" id="pennyhelper-n-2-1_20" onclick="getLatestSoftware('pennyhelper-n-2-1_20')">Download Software</button>
                 </div>
 
                 <div class="project">
                     <h2>nonprofit 3</h2>
                     <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In bibendum tincidunt nulla, id semper mi cursus ac. Fusce turpis urna, condimentum sit amet dolor at, vulputate ultrices massa. Vestibulum non euismod nulla, eu pretium risus. Curabitur porta molestie vulputate.</div>
-                    <button class="btn_one" onclick="getLatestSoftware('pennyhelper-n-3-1_20')">Download Software</button>
+                    <button class="btn_one" id="pennyhelper-n-3-1_20" onclick="getLatestSoftware('pennyhelper-n-3-1_20')">Download Software</button>
                 </div>
 
              </div>
@@ -65,7 +65,7 @@
     </div>
 
     <div id="footer">
-        Created by Expeditionary Interest Group<br><br> <a href="https://github.com/pennyhelper">Penny Helper</a>
+        Created by Expeditionary Interest Group<br><br> <a href="https://github.com/EIGpennyhelper">Penny Helper</a>
     </div>
 
 <script src="index.js" type="text/javascript"></script>
