--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE>
+ <html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -20,11 +20,11 @@
         <div id="spinner"></div>
     </div>
     <div id="header" class="animated slideInDown" style="animation-delay:1.8s;">
-        <div id="title"><a href="index.html">penny helper</a></div><br>
+        <div id="title"><a href="index">penny helper</a></div><br>
         <div id="links">
-            <a href="nonprofits.html#nonprofits">nonprofits</a>
-            <a href="about.html#about" style="margin:0px 60px;">about</a>
-            <a href="contact.html#contact">contact</a>
+            <a href="nonprofits#nonprofits">nonprofits</a>
+            <a href="about#about" style="margin:0px 60px;">about</a>
+            <a href="contact#contact">contact</a>
         </div>
     </div>
 
@@ -32,7 +32,7 @@
     <div id="middle">
         <div id="tagline" class="animated zoomIn" style="animation-delay:1.8s;">
             the future of cryptocurrency is here<br>
-            <button class="btn_one"><a href="nonprofits.html#nonprofits">Start Today</a></button>
+            <button class="btn_one"><a href="nonprofits#nonprofits">Start Today</a></button>
         </div>
     </div>
     </center>
@@ -46,7 +46,7 @@
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. In bibendum tincidunt nulla, id semper mi cursus ac. Fusce turpis urna, condimentum sit amet dolor at, vulputate ultrices massa. Vestibulum non euismod nulla, eu pretium risus. Curabitur porta molestie vulputate. Sed tortor enim, rhoncus vel mauris vitae, elementum condimentum augue. Donec fermentum lobortis lectus, in feugiat turpis faucibus et. Pellentesque luctus metus vitae augue lobortis sagittis vitae sit amet enim. Morbi egestas velit ac arcu fermentum lacinia. Nullam eget hendrerit neque. Cras et laoreet ante. Vivamus condimentum euismod commodo. Nulla pulvinar, turpis vitae condimentum tempor, ex ex eleifend quam, et maximus sapien mi sed est. Donec elit mi, dictum nec magna quis, mollis sollicitudin ligula. Maecenas ullamcorper ante vel ullamcorper mollis. Interdum et malesuada fames ac ante ipsum primis in faucibus.
                         </p>
                  </div> 
-                 <button class="btn_one"><a href="nonprofits.html#nonprofits">view our nonprofits</a></button>
+                 <button class="btn_one"><a href="nonprofits#nonprofits">view our nonprofits</a></button>
             </div>
          
             <div id="about">
@@ -62,7 +62,7 @@
                  <h2>about</h2>
                  <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In bibendum tincidunt nulla, id semper mi cursus ac. Fusce turpis urna, condimentum sit amet dolor at, vulputate ultrices massa. Vestibulum non euismod nulla, eu pretium risus. Curabitur porta molestie vulputate.Lorem ipsum dolor sit amet, consectetur adipiscing elit. In bibendum tincidunt nulla, id semper mi cursus ac. Fusce turpis urna, condimentum sit amet dolor at, vulputate ultrices massa. Vestibulum non euismod nulla, eu pretium risus. Curabitur porta molestie vulputate.
                  </div>
-                 <button class="btn_one"><a href="about.html#nonprofits">find out more</a></button>
+                 <button class="btn_one"><a href="about#nonprofits">find out more</a></button>
                 </div>
 
          </div>
@@ -74,7 +74,7 @@
                     please contact our team if you have any questions about Penny Helper or if you encounter any errors
                 </p>
             </div> 
-            <button class="btn_one"><a href="contact.html#contact">more information</a></button>
+            <button class="btn_one"><a href="contact#contact">more information</a></button>
        </div>
              
     </div>
