--- a/nonprofits.html
+++ b/nonprofits.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE>
 <html lang="en">
 
 <head>
@@ -20,11 +20,11 @@
         <div id="spinner"></div>
     </div>
     <div id="header" class="animated slideInDown" style="animation-delay:1.8s;">
-    <div id="title"><a href="index.html">penny helper</a></div><br>
+    <div id="title"><a href="index">penny helper</a></div><br>
     <div id="links">
-        <a href="nonprofits.html#nonprofits">nonprofits</a>
-        <a href="about.html#about" style="margin:0px 60px;">about</a>
-        <a href="contact.html#contact">contact</a>
+        <a href="nonprofits#nonprofits">nonprofits</a>
+        <a href="about#about" style="margin:0px 60px;">about</a>
+        <a href="contact#contact">contact</a>
     </div>
     </div>
 
@@ -32,7 +32,7 @@
     <div id="middle">
         <div id="tagline" class="animated zoomIn" style="animation-delay:1.8s;">
             the future of cryptocurrency is here<br>
-            <button class="btn_one"><a href="nonprofits.html#nonprofits">Start Today</a></button>
+            <button class="btn_one"><a href="nonprofits#nonprofits">Start Today</a></button>
         </div>
     </div>
     </center>
@@ -71,4 +71,4 @@
 <script src="index.js" type="text/javascript"></script>
 
 </body>
-</html>
+</html>>
