--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE>
+ <html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -20,11 +20,11 @@
         <div id="spinner"></div>
     </div>
     <div id="header" class="animated slideInDown" style="animation-delay:1.8s;">
-        <div id="title"><a href="index.html">penny helper</a></div><br>
+        <div id="title"><a href="index">penny helper</a></div><br>
         <div id="links">
-            <a href="nonprofits.html#nonprofits">nonprofits</a>
-            <a href="about.html#about" style="margin:0px 60px;">about</a>
-            <a href="contact.html#contact">contact</a>
+            <a href="nonprofits#nonprofits">nonprofits</a>
+            <a href="about#about" style="margin:0px 60px;">about</a>
+            <a href="contact#contact">contact</a>
         </div>
     </div>
 
@@ -32,7 +32,7 @@
     <div id="middle">
         <div id="tagline" class="animated zoomIn" style="animation-delay:1.8s;">
             the future of cryptocurrency is here<br>
-            <button class="btn_one"><a href="nonprofits.html#nonprofits">Start Today</a></button>
+            <button class="btn_one"><a href="nonprofits#nonprofits">Start Today</a></button>
         </div>
     </div>
     </center>
@@ -58,4 +58,4 @@
 <script src="index.js" type="text/javascript"></script>
 
 </body>
-</html>
+</html>>
