--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<!DOCTYPE>
- <html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -62,7 +62,7 @@
                  <h2>about</h2>
                  <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In bibendum tincidunt nulla, id semper mi cursus ac. Fusce turpis urna, condimentum sit amet dolor at, vulputate ultrices massa. Vestibulum non euismod nulla, eu pretium risus. Curabitur porta molestie vulputate.Lorem ipsum dolor sit amet, consectetur adipiscing elit. In bibendum tincidunt nulla, id semper mi cursus ac. Fusce turpis urna, condimentum sit amet dolor at, vulputate ultrices massa. Vestibulum non euismod nulla, eu pretium risus. Curabitur porta molestie vulputate.
                  </div>
-                 <button class="btn_one"><a href="about#nonprofits">find out more</a></button>
+                 <button class="btn_one"><a href="about#about">find out more</a></button>
                 </div>
 
          </div>
