--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
     <div id="middle">
         <div id="tagline" class="animated zoomIn" style="animation-delay:1.8s;">
             the future of cryptocurrency is here<br>
-            <button class="btn_one"><a href="nonprofits#nonprofits">Start Today</a></button>
+            <button onclick="homeButton()" class="btn_one">Start Today</button>
         </div>
     </div>
     </center>
