--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. In bibendum tincidunt nulla, id semper mi cursus ac. Fusce turpis urna, condimentum sit amet dolor at, vulputate ultrices massa. Vestibulum non euismod nulla, eu pretium risus. Curabitur porta molestie vulputate. Sed tortor enim, rhoncus vel mauris vitae, elementum condimentum augue. Donec fermentum lobortis lectus, in feugiat turpis faucibus et. Pellentesque luctus metus vitae augue lobortis sagittis vitae sit amet enim. Morbi egestas velit ac arcu fermentum lacinia. Nullam eget hendrerit neque. Cras et laoreet ante. Vivamus condimentum euismod commodo. Nulla pulvinar, turpis vitae condimentum tempor, ex ex eleifend quam, et maximus sapien mi sed est. Donec elit mi, dictum nec magna quis, mollis sollicitudin ligula. Maecenas ullamcorper ante vel ullamcorper mollis. Interdum et malesuada fames ac ante ipsum primis in faucibus.
                         </p>
                  </div> 
-                 <button class="btn_one"><a href="nonprofits#nonprofits">view our nonprofits</a></button>
+                 <button onclick="nonprofitsButton()" class="btn_one">view our nonprofits</button>
             </div>
          
             <div id="about">
@@ -55,14 +55,14 @@
                  <div class="project">
                  <h2>our solution</h2>
                  <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In bibendum tincidunt nulla, id semper mi cursus ac. Fusce turpis urna, condimentum sit amet dolor at, vulputate ultrices massa. Vestibulum non euismod nulla, eu pretium risus. Curabitur porta molestie vulputate.</div>
-                 <button class="btn_one"><a href="https://github.com/EIGpennyhelper">visit project</a></button>
+                 <button onclick="projectButton()" class="btn_one">visit project</button>
                 </div>
 
                 <div class="project">
                  <h2>about</h2>
                  <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In bibendum tincidunt nulla, id semper mi cursus ac. Fusce turpis urna, condimentum sit amet dolor at, vulputate ultrices massa. Vestibulum non euismod nulla, eu pretium risus. Curabitur porta molestie vulputate.Lorem ipsum dolor sit amet, consectetur adipiscing elit. In bibendum tincidunt nulla, id semper mi cursus ac. Fusce turpis urna, condimentum sit amet dolor at, vulputate ultrices massa. Vestibulum non euismod nulla, eu pretium risus. Curabitur porta molestie vulputate.
                  </div>
-                 <button class="btn_one"><a href="about#about">find out more</a></button>
+                 <button onclick="aboutButton()" class="btn_one">find out more</button>
                 </div>
 
          </div>
@@ -74,7 +74,7 @@
                     please contact our team if you have any questions about Penny Helper or if you encounter any errors
                 </p>
             </div> 
-            <button class="btn_one"><a href="contact#contact">more information</a></button>
+            <button onclick="contactButton()" class="btn_one">more information</button>
        </div>
              
     </div>
