--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                  <div class="project">
                  <h2>our solution</h2>
                  <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In bibendum tincidunt nulla, id semper mi cursus ac. Fusce turpis urna, condimentum sit amet dolor at, vulputate ultrices massa. Vestibulum non euismod nulla, eu pretium risus. Curabitur porta molestie vulputate.</div>
-                 <button onclick="projectButton()" class="btn_one">visit project</button>
+                 <button onclick="homeButton()" class="btn_one">visit project</button>
                 </div>
 
                 <div class="project">
