--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
         </div>
     </div>
 
+    <a href="#" id="scroll" style="display: none;"><span></span></a>
+
     <center>
     <div id="middle">
         <div id="tagline" class="animated zoomIn" style="animation-delay:1.8s;">
