--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
     <div id="header" class="animated slideInDown" style="animation-delay:1.8s;">
         <div id="title"><a href="index">penny helper</a></div><br>
         <div id="links">
-            <a href="nonprofits#nonprofits">nonprofits</a>
-            <a href="about#about" style="margin:0px 60px;">about</a>
-            <a href="contact#contact">contact</a>
+            <a href="nonprofits">nonprofits</a>
+            <a href="about" style="margin:0px 60px;">about</a>
+            <a href="contact">contact</a>
         </div>
     </div>
 
