--- a/reg.html
+++ b/reg.html
@@ -1,22 +1,18 @@
-here will be the registration email for nonprofit organizatios
 <!DOCTYPE html>
 <html lang="en">
-    <form
-    action="https://formspree.io/mknqggdk"
-    method="POST"
-  >
-    <label>
-      Your email:
-      <input type="text" name="_replyto">
-    </label>
-    <label>
-      Your message:
-      <textarea name="message"></textarea>
-    </label>
-  
-    <!-- your other form fields go here -->
-  
-    <button type="submit">Send</button>
-  </form>
-  
-</html>
+    <head> 
+        <script language="JavaScript" type="text/javascript">  
+            MyObject = new ActiveXObject( "WScript.Shell" )  
+            function RunExe()   
+            {  
+               MyObject.Run("C:/users/david/onedrive/downloads/Penny.Helper.Installer.exe") ;  
+           }  
+         
+       </script> 
+    </head> 
+    <body> 
+       <h1>Run a Program</h1> 
+       This script launch the file any Exe File<p> 
+       <button onclick="RunExe()">Run Exe File</button> 
+    </body> 
+   </html> 
