--- a/download.html
+++ b/download.html
@@ -45,7 +45,7 @@
       <h1>thank you for downloading penny helper</h1>   
       <br><br>
       <h2>your installation should begin automatically...</h2>
-      <p>please locate your the download file in the bottom of the screen</p>     
+      <p>please locate your download file at the bottom of the screen</p>   
     </div> 
     </div>
 
