--- a/download.html
+++ b/download.html
@@ -44,6 +44,7 @@
       <br><br><br>
       <h1>thank you for downloading penny helper</h1>   
       <br><br>
+      <div id="buttonAdd"></div>
       <h2>your installation should begin automatically...</h2>
       <p>please locate your download file at the bottom of the screen</p>   
     </div> 
