--- a/404.html
+++ b/404.html
@@ -45,7 +45,7 @@
       <h1>404 error</h1>   
       <br><br>
       <h2>page not found :(</h2>
-      <p>the page you are looking for does not exist or may have been move</p>
+      <p>the page you are looking for does not exist or may have been moved</p>
       <p>please try a differnet page or url</p>     
     </div> 
     </div>
